@@ -64,6 +64,7 @@ Core - General
   - minor refactoring of admin/index.php, admin/header.php, admin/footer.php and admin/moduleinterface.php
   - now use hooks so that loaded modules can now add text to the head area of any admin page output.
   - Change the help for the basic attributes.
+  - Adds new 'switch user' functionality for members of the admin group.
 
   - #11080 - Parameter $adding in GetContentBlockFieldInput always FALSE.
   - #11093 - Bad error message in jquery.cmsms_autorefresh.js.
